# notellm

./: .gitignore  pyproject.toml  test_mcp_routing.py  test_pipeline_router.py
notellm/: __init__.py  __main__.py  client.py  hooks.py  ir.py  mcp.py  pipeline_executor.py  registry.py  runner.py
notellm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
operators/: add_source.py  check_job.py  check_jobs.py  collect.py  create_notebook.py  generate.py  get_notebook.py  health.py  list_modes.py  list_notebooks.py  model_resolver.py  podcast_logic.py  save_to_obsidian.py  synthesize.py
tests/: test_client.py  test_ir.py  test_registry.py
